# scriv-release

./: .gitignore  .pinact.yaml  CHANGELOG.md  README.md  action.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml  reusable.yml
changelog.d/: 20260514_123236_t.yic.yt_zero_major_policy.md  20260515_094848_t.yic.yt_client_id_input.md  20260515_123214_t.yic.yt_fixed_orphan_tag_guard.md  20260515_144911_t.yic.yt_bump_in_preview_pr.md  20260515_224751_t.yic.yt_fix_bmv_allow_dirty.md  20260516_001900_t.yic.yt_tag_based_bumping.md  20260516_003935_t.yic.yt_drift_message_tag_behind.md  20260516_010034_t.yic.yt_chore_dogfood_hatch_vcs.md  20260516_012314_t.yic.yt_fix_hatch_vcs_fallback.md  20260516_014608_t.yic.yt_bump_in_preview_pr.md
docs/: changesets.md  index.html  index.md  quickstart.md  token-setup.md
docs-workers/install-app-callback/: pyproject.toml  wrangler.jsonc
docs-workers/install-app-callback/src/: entry.py
docs/install-app/: index.html
scripts/: maybe-tag-release.sh  open-preview-pr.sh
src/scriv_release/: __init__.py  cli.py  config.py  orchestrate.py  policy.py
src/scriv_release/versioning/: __init__.py  _git.py  _semver.py  bump_my_version.py  hatch.py  shell.py  uv.py
tests/: test_config.py  test_orchestrate.py  test_policy.py  test_versioning_bump_my_version.py  test_versioning_git.py  test_versioning_hatch.py  test_versioning_semver.py  test_versioning_shell.py  test_versioning_uv.py
workers/install-app-callback/src/: entry.py
