[project]
name = "scriv-release"
dynamic = ["version"]
description = "Changesets-style release automation on top of scriv"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Yuichiro Tachibana (Tsuchiya)", email = "t.yic.yt@gmail.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "packaging>=21",
    "scriv>=1.7",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
bump-my-version = ["bump-my-version>=0.28"]
hatch = ["hatch>=1.12"]
all = ["scriv-release[bump-my-version,hatch]"]

[project.scripts]
scriv-release = "scriv_release.cli:main"

[project.entry-points."scriv_release.version_providers"]
bump-my-version = "scriv_release.versioning.bump_my_version:Provider"
hatch           = "scriv_release.versioning.hatch:Provider"
uv              = "scriv_release.versioning.uv:Provider"
shell           = "scriv_release.versioning.shell:Provider"

[project.urls]
Homepage = "https://github.com/whitphx/scriv-release"
Issues = "https://github.com/whitphx/scriv-release/issues"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.10",
]
docs = [
    "mkdocs-material>=9.5",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
# GitHub Actions checks out the action's source under
# /home/runner/work/_actions/<owner>/<repo>/<sha>/ WITHOUT a .git directory,
# so `pip install ${GITHUB_ACTION_PATH}[bump-my-version]` (action.yml's
# install step) would fail with "setuptools-scm was unable to detect
# version". The fallback lets the install succeed; the action only needs
# the package to be importable, not to know its own version string.
# Real PyPI publishes build from a tagged checkout *with* .git, so they
# still get the right version from the tag.
fallback-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["src/scriv_release"]

[tool.scriv]
categories = ["Added", "Changed", "Deprecated", "Removed", "Fixed", "Security", "Chore"]
format = "md"
md_header_level = 2

[tool.scriv-release]
# Default provider is bump-my-version; with `dynamic = ["version"]` it reads
# the current version from the latest git tag, keeping the project's notion
# of "current" in step with the tag scriv-release itself just pushed.

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = ["scriv.*"]
follow_untyped_imports = true
